# polymarket-cpp-client

./: CMakeLists.txt  README.md
examples/: rest_example.cpp  test_positions.cpp
include/: clob_client.hpp  http_client.hpp  order_signer.hpp  types.hpp
src/: arb_test.cpp  clob_client.cpp  http_client.cpp  main.cpp  order_signer.cpp  order_test.cpp  orderbook.cpp  websocket_client.cpp
